gcloud-dev-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-beat
  labels:
    app: heartsteps-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heartsteps-beat
  template:
    metadata:
      labels:
        app: heartsteps-beat
    spec:
      containers:
      - name: heartsteps-celery-beat
        image: gcr.io/heartsteps-dev/heartsteps-server
        imagePullPolicy: Always
        command: ['honcho', 'start', 'beat']
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.17
        command:
          - "/cloud_sql_proxy"
          - "-instances=heartsteps-dev:us-central1:dev-database=tcp:5432"
          - "-credential_file=/credentials/gcloud-dev-service-account.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.7
        ports:
        - containerPort: 5672
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    run: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heartsteps-nginx
  template:
    metadata:
      labels:
        app: heartsteps-nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/heartsteps-dev/heartsteps-nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: heartsteps-nginx
  labels:
    app: heartsteps-nginx
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: heartsteps-nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-server
  labels:
    app: heartsteps-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: heartsteps-server
  template:
    metadata:
      labels:
        app: heartsteps-server
    spec:
      containers:
      - name: heartsteps-app
        image: gcr.io/heartsteps-dev/heartsteps-server:latest
        imagePullPolicy: Always
        command: ['honcho', 'start', 'web']
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.17
        command:
          - "/cloud_sql_proxy"
          - "-instances=heartsteps-dev:us-central1:dev-database=tcp:5432"
          - "-credential_file=/credentials/gcloud-dev-service-account.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: heartsteps-server
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: heartsteps-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-worker
  labels:
    app: heartsteps-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: heartsteps-worker
  template:
    metadata:
      labels:
        app: heartsteps-worker
    spec:
      containers:
      - name: heartsteps-celery-worker
        image: gcr.io/heartsteps-dev/heartsteps-server
        imagePullPolicy: Always
        command: ['honcho', 'start', 'celery']
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.17
        command:
          - "/cloud_sql_proxy"
          - "-instances=heartsteps-dev:us-central1:dev-database=tcp:5432"
          - "-credential_file=/credentials/gcloud-dev-service-account.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: LoadBalancer
  selector:
    app: heartsteps-nginx
  ports:
  - port: 80
    targetPort: 8000
