deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: walking-suggestion-service
  labels:
    app: walking-suggestion-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: walking-suggestion-service
    spec:
      containers:
      - name: walking-suggestion-service
        image: gcr.io/heartsteps-kpwhri/walking-suggestion-service:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: walking-suggestion
  labels:
    run: walking-suggestion
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: walking-suggestion-service

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: anti-sedentary-service
  labels:
    app: anti-sedentary-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: anti-sedentary-service
    spec:
      containers:
      - name: anti-sedentary-service
        image: gcr.io/heartsteps-kpwhri/anti-sedentary-service:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: anti-sedentary
  labels:
    run: anti-sedentary
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: anti-sedentary-service

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.7
        ports:
        - containerPort: 5672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    run: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heartsteps-worker
  labels:
    app: heartsteps-worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: heartsteps-worker
    spec:
      containers:
      - name: heartsteps-app
        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
        imagePullPolicy: Always
        command: ['honcho', 'start', 'cloudsql', 'celery']
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heartsteps-server
  labels:
    app: heartsteps-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: heartsteps-server
    spec:
      containers:
      - name: heartsteps-app
        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
        imagePullPolicy: Always
        command: ['honcho', 'start', 'cloudsql', 'web']
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /privacy-policy
            port: 8080
            httpHeaders:
              - name: Host
                value: heartsteps-service
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /privacy-policy
            port: 8080
            httpHeaders:
              - name: Host
                value: heartsteps-service
          initialDelaySeconds: 30
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: heartsteps-service
  labels:
    app: heartsteps-server
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: heartsteps-server

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heartsteps
  annotations:
    kubernetes.io/ingress.global-static-ip-name: heartsteps-global
spec:
  backend:
    serviceName: heartsteps-service
    servicePort: 8080
