justwalk-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: justwalk-beat
  labels:
    app: justwalk-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: justwalk-beat
  template:
    metadata:
      labels:
        app: justwalk-beat
    spec:
      containers:
      - name: justwalk-celery-beat
        image: gcr.io/ucsd-publichealth-justwalk/justwalk-server
        imagePullPolicy: Always
        command: ['honcho', 'start', 'beat']
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
        command:
          - "/cloud_sql_proxy"
          - "-instances=ucsd-publichealth-justwalk:us-west1:justwalk-db2=tcp:5432"
          - "-credential_file=/credentials/ucsd-publichealth-justwalk.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.7
        ports:
        - containerPort: 5672
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    run: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: justwalk-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: justwalk-nginx
  template:
    metadata:
      labels:
        app: justwalk-nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/ucsd-publichealth-justwalk/justwalk-nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: justwalk-nginx
  labels:
    app: justwalk-nginx
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: justwalk-nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: justwalk-server
  labels:
    app: justwalk-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: justwalk-server
  template:
    metadata:
      labels:
        app: justwalk-server
    spec:
      containers:
      - name: justwalk-app
        image: gcr.io/ucsd-publichealth-justwalk/justwalk-server:latest
        imagePullPolicy: Always
        command: ['honcho', 'start', 'web']
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
        command:
          - "/cloud_sql_proxy"
          - "-instances=ucsd-publichealth-justwalk:us-west1:justwalk-db2=tcp:5432"
          - "-credential_file=/credentials/ucsd-publichealth-justwalk.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: justwalk-server
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: justwalk-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: justwalk-worker
  labels:
    app: justwalk-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: justwalk-worker
  template:
    metadata:
      labels:
        app: justwalk-worker
    spec:
      containers:
      - name: justwalk-celery-worker
        image: gcr.io/ucsd-publichealth-justwalk/justwalk-server
        imagePullPolicy: Always
        command: ['honcho', 'start', 'celery']
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
        command:
          - "/cloud_sql_proxy"
          - "-instances=ucsd-publichealth-justwalk:us-west1:justwalk-db2=tcp:5432"
          - "-credential_file=/credentials/ucsd-publichealth-justwalk.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: justwalk-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: l4-load-balancer-frontend-static-ip
    networking.gke.io/managed-certificates: justwalk-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: justwalk-nginx
      port:
        number: 8000
