kpwhri-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: walking-suggestion-service
  labels:
    app: walking-suggestion-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: walking-suggestion-service
    spec:
      containers:
      - name: walking-suggestion-service
        image: gcr.io/heartsteps-kpwhri/walking-suggestion-service:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: v1
kind: Service
metadata:
  name: walking-suggestion
  labels:
    run: walking-suggestion
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: walking-suggestion-service

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: anti-sedentary-service
  labels:
    app: anti-sedentary-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: anti-sedentary-service
    spec:
      containers:
      - name: anti-sedentary-service
        image: gcr.io/heartsteps-kpwhri/anti-sedentary-service:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: v1
kind: Service
metadata:
  name: anti-sedentary
  labels:
    run: anti-sedentary
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: anti-sedentary-service

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.7
        ports:
        - containerPort: 5672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    run: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  labels:
    app: monitor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
      - name: monitor
        image: mher/flower
        ports:
        - containerPort: 8888
        command: ['flower',  "--broker=amqp://guest:guest@rabbitmq:5672//", "--port=8888", "--url_prefix=monitor"]

---

apiVersion: v1
kind: Service
metadata:
  name: monitor
  labels:
    run: monitor
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: monitor

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-worker
  labels:
    app: heartsteps-worker
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: heartsteps-worker
    spec:
      containers:
      - name: heartsteps-celery-worker
        image: gcr.io/heartsteps-kpwhri/heartsteps-server
        imagePullPolicy: Always
        command: ["/bin/sh","-c"]
        args: ["gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS && gcloud config set project heartsteps-kpwhri && honcho start cloudsql celeryDefault"]
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-worker-fitbit
  labels:
    app: heartsteps-worker-fitbit
spec:
  selector:
    matchLabels:
      app: heartsteps-worker-fitbit
  replicas: 4
  template:
    metadata:
      labels:
        app: heartsteps-worker-fitbit
    spec:
      containers:
      - name: heartsteps-celery-worker-fitbit
        image: gcr.io/heartsteps-kpwhri/heartsteps-server
        imagePullPolicy: Always
        command: ["/bin/sh","-c"]
        args: ["gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS && gcloud config set project heartsteps-kpwhri && honcho start cloudsql celeryFitbit"]
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-worker-messages
  labels:
    app: heartsteps-worker-messages
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: heartsteps-worker-messages
    spec:
      containers:
      - name: heartsteps-celery-worker-messages
        image: gcr.io/heartsteps-kpwhri/heartsteps-server
        imagePullPolicy: Always
        command: ["/bin/sh","-c"]
        args: ["gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS && gcloud config set project heartsteps-kpwhri && honcho start cloudsql celeryMessages"]
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-worker-export
  labels:
    app: heartsteps-worker-export
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: heartsteps-worker-export
    spec:
      containers:
      - name: heartsteps-celery-worker-messages
        image: gcr.io/heartsteps-kpwhri/heartsteps-server
        imagePullPolicy: Always
        command: ["/bin/sh","-c"]
        args: ["gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS && gcloud config set project heartsteps-kpwhri && honcho start cloudsql celeryExport"]
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-beat
  labels:
    app: heartsteps-beat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: heartsteps-beat
    spec:
      containers:
      - name: heartsteps-celery-beat
        image: gcr.io/heartsteps-kpwhri/heartsteps-server
        imagePullPolicy: Always
        command: ['honcho', 'start', 'cloudsql', 'beat']
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-server
  labels:
    app: heartsteps-server
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: heartsteps-server
    spec:
      containers:
      - name: heartsteps-app
        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
        imagePullPolicy: Always
        command: ['honcho', 'start', 'cloudsql', 'web']
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /privacy-policy
            port: 8080
            httpHeaders:
              - name: Host
                value: heartsteps-service
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /privacy-policy
            port: 8080
            httpHeaders:
              - name: Host
                value: heartsteps-service
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: credentials
          mountPath: "/credentials"
          readOnly: true
      volumes:
      - name: credentials
        secret: 
          secretName: credentials

---

apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: heartsteps-server
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: heartsteps-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: heartsteps-nginx
  labels:
    app: heartsteps-nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: heartsteps-nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/heartsteps-kpwhri/heartsteps-nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: heartsteps-nginx
  labels:
    app: heartsteps-nginx
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: heartsteps-nginx

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: heartsteps
  annotations:
    kubernetes.io/ingress.global-static-ip-name: heartsteps-global
spec:
  backend:
    serviceName: heartsteps-nginx
    servicePort: 8000
